# jlcpcb-part-list-generator

./: baseparts.csv  capacitors.csv  inductors.csv  pyproject.toml  resistors.csv
jlcpcb_part_list_generator/: app.py  capacitors.py  inductors.py  resistors.py  search_model.py
