[tool.poetry]
name = "jlcpcb-part-list-generator"
version = "0.1.0"
description = ""
authors = ["Rick Bassham <brodrick.bassham@gmail.com>"]
packages = [{include = "jlcpcb_part_list_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^1.10.4"
pint = "^0.20.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.11.4"
types-requests = "^2.28.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
